# poke-me

./: .gitignore  Cargo.toml  LICENSE  README.md  poke.db
.butane/: connection.json
.butane/migrations/: state.json
.butane/migrations/20250828_042344793_init/: sqlite_down.sql  sqlite_up.sql
.butane/migrations/current/: Poke.table
migrations/: 20240101000001_create_poke_table.sql
scripts/: poke-me.service.template  setup-systemd.sh
src/: cli.rs  display.rs  main.rs  service.rs
src/database/: mod.rs  models.rs
src/notification/: mod.rs
