[package]
name = "poke_me"
version = "0.1.0"
edition = "2021"

[dependencies]
notify-rust = "4.11.7"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate"] }
clap = { version = "4.5.46", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
